src/frontend/ts/tests/fixtures/invalid_modifiers/method.cloesce.ts
// @ts-nocheck
// InvalidApiMethodModifier

@D1
export class Foo {
  @PrimaryKey
  id: number;

  @POST
  private method() {}
}
